<resources>
    <string name="app_name">B R O L O N</string>
    <string name="brolon_adalah_perusahaan_sablon_yang_lagi_laris_manis_brolon_menyediakan_jasa_sablon_yang_terbaik_dan_pasnya_dak_mengecewakan_pelanggan_ini_beberapa_view_desain_kami">Brolon adalah perusahaan sablon yang lagi laris manis. Brolon menyediakan jasa sablon yang terbaik dan pasnya dak mengecewakan pelanggan ini beberapa view desain kami</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register">REGISTER</string>
    <string name="login">LOGIN</string>
    <string name="email">EMAIL</string>
    <string name="name">NAME</string>
    <string name="nohp">NO HP</string>
    <string name="password">PASSWORD</string>

    <string-array name="jenis_kain">
        <item>Cotton Combed 30s Premium</item>
        <item>Cotton Combed 30s</item>
        <item>Cotton Combed 24s</item>
        <item>Cotton Combed 20s</item>
        <item>Cotton Bamboo</item>
    </string-array>

    <string-array name="warna_kain">
        <item>Hitam</item>
        <item>Putih</item>
        <item>Navy</item>
        <item>Charcoal</item>
        <item>Maroon</item>
        <item>Brown</item>
    </string-array>

    <string-array name="jenis_sablon">
        <item>Plastisol</item>
        <item>Discharge</item>
        <item>Rubber</item>
    </string-array>

    <string-array name="status_order">
        <item>Diterima</item>
        <item>Dibayar</item>
        <item>Produksi</item>
        <item>Selesai</item>
    </string-array>

    <string name="hintNama">Budi Doremi</string>
    <string name="hintEmail">example@gmail.com</string>
    <string name="hintNohp">085213188863</string>
    <string name="hintPassword">Type your password</string>
    <string name="est">est 2020</string>
    <string name="profile">Profile</string>

</resources>