<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/beranda"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="45sp"
        android:textStyle="italic">

    </TextView>

    <TableRow
        android:layout_width="300dp"
        android:layout_height="1dp"
        android:layout_marginLeft="40dp"
        android:background="@color/white">

    </TableRow>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/est"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="italic">

    </TextView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/shape_rectangle"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:layout_marginTop="10sp"
            android:text="@string/name"
            android:textSize="35sp" />

        <EditText
            android:id="@+id/input_nama"
            android:hint="@string/hintNama"
            android:layout_width="300sp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:layout_marginTop="10sp"
            android:text="@string/email"
            android:textSize="35sp" />

        <EditText
            android:id="@+id/input_email"
            android:layout_width="300sp"
            android:hint="@string/hintEmail"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:layout_marginTop="10sp"
            android:text="@string/nohp"
            android:textSize="35sp" />

        <EditText
            android:id="@+id/input_nohp"
            android:hint="@string/hintNohp"
            android:layout_width="300sp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:layout_marginTop="10sp"
            android:text="@string/password"
            android:textSize="35sp" />

        <EditText
            android:id="@+id/input_password"
            android:hint="@string/hintPassword"
            android:layout_width="300sp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/register"
            android:textSize="40sp" />
    </LinearLayout>
</LinearLayout>