<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/beranda"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="45sp"
        android:textStyle="italic"
        android:gravity="center">
    </TextView>

    <TableRow
        android:layout_width="300dp"
        android:layout_height="1dp"
        android:layout_marginLeft="40dp"
        android:background="@color/white">
    </TableRow>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/est"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="italic"
        android:gravity="center">
    </TextView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginLeft="55dp"
        android:background="@drawable/shape_rectangle"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="10dp"
            android:text="@string/email"
            android:textSize="35sp"/>

        <EditText
            android:id="@+id/input_email"
            android:layout_marginLeft="10sp"
            android:hint="@string/hintEmail"
            android:layout_width="250sp"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:layout_marginTop="10sp"
            android:text="@string/password"
            android:textSize="35sp"/>

        <EditText
            android:id="@+id/input_password"
            android:inputType="textPassword"
            android:hint="@string/hintPassword"
            android:layout_width="250sp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10sp"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="65dp"
            android:layout_marginTop="60dp"
            android:gravity="center"
            android:text="@string/login"
            android:textSize="40sp"/>
    </LinearLayout>
</LinearLayout>
