<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity"
    android:orientation="vertical"
    android:background="@color/beranda">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="88dp"
        android:text="@string/profile"
        android:textSize="24sp"
        android:background="#414141"
        android:textColor="@color/white"
        android:gravity="center">
    </TextView>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="120dp"
        android:background="@drawable/shape_rectangle"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:layout_marginTop="10sp"
            android:text="@string/name"
            android:textSize="35sp" />

        <TextView
            android:id="@+id/edit_nama"
            android:hint="@string/hintNama"
            android:layout_width="300sp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:layout_marginTop="10sp"
            android:text="@string/email"
            android:textSize="35sp" />

        <TextView
            android:id="@+id/edit_email"
            android:layout_width="300sp"
            android:hint="@string/hintEmail"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:layout_marginTop="10sp"
            android:text="@string/nohp"
            android:textSize="35sp" />

        <EditText
            android:id="@+id/edit_nohp"
            android:hint="@string/hintNohp"
            android:layout_width="300sp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:layout_marginTop="10sp"
            android:text="@string/password"
            android:textSize="35sp" />

        <EditText
            android:id="@+id/edit_password"
            android:hint="@string/hintPassword"
            android:layout_width="300sp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp"
            android:inputType="textPassword" />

    </LinearLayout>


    <ImageButton
        android:id="@+id/ubahprofil"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="480dp"
        android:background="@null"
        android:src="@drawable/btn_ubah_profile"></ImageButton>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="0dp"
        android:background="#414141"
        android:gravity="bottom|center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints">

        <ImageButton
            android:id="@+id/homeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="#00FFFFFF"
            app:srcCompat="@drawable/home_black" />

        <ImageButton
            android:id="@+id/orderButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="#00FFFFFF"
            app:srcCompat="@drawable/order_list_black"/>

        <ImageButton
            android:id="@+id/historyButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="#00FFFFFF"
            app:srcCompat="@drawable/history_black"/>

        <ImageButton
            android:id="@+id/profileButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="#00FFFFFF"
            app:srcCompat="@drawable/profile_white"/>
    </LinearLayout>
</RelativeLayout>