<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="200sp"
            android:layout_marginLeft="10sp"
            android:text="@string/name"
            android:textSize="20sp">
        </TextView>

        <EditText
            android:id="@+id/input_nama"
            android:layout_marginLeft="10sp"
            android:layout_width="250sp"
            android:layout_height="wrap_content">

        </EditText>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:layout_marginTop="10sp"
            android:text="@string/password"
            android:textSize="20sp">

        </TextView>

        <EditText
            android:id="@+id/input_password"
            android:inputType="textPassword"
            android:layout_width="250sp"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp"
            android:layout_height="wrap_content">

        </EditText>


        <Button
            android:id="@+id/btn_register"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="120dp"
            android:layout_marginLeft="55dp"
            android:gravity="center"
            android:text="@string/login"
            android:textSize="40sp">
        </Button>
    </LinearLayout>
</LinearLayout>
